06-Jan-2016 Added new test, PublishingTest1, which can be used to exercise the features of the Publishing package.

04-Jan-2016 Fixes #95. All Publisher public methods (Include* and ChangeRPath) now return the modules they create, to allow such modules to be ordered through dependencies. Note that IncludeFramework returns an Array<CollatedObject> since it can copy directories, files and symbolic links.

28-Dec-2015 ======== Version 1.0.0 Release ========

14-Dec-2015 Renamed the entry point of package repositories test code, from ConfigureRepository to configure_repository.

09-Dec-2015 Fixes #88. Fixed issue where running 'bam --help --clean' in a package directory would result in an exception when the build root is cleaned.

09-Dec-2015 Fixes #89. Static libraries or header libraries that compile against header libraries now set up module requirements in the graph, so projects actually display those headers. This does not affect the build, as the patches were working previously.

01-Dec-2015 Check first whether a VSProject option already contains a value, before raising an exception if it isn't possible to append.

30-Nov-2015 ======== Version 1.0.0b4 Release ========

30-Nov-2015 Fixes #58. Documented Core assembly, and some of the major packages.

26-Nov-2015 Fixes #85. Added check for mismatching brackets on a TokenizedString function call (pre and post types), e.g. @dir($(0) would previously result in an infinite loop, but will now fail.

26-Nov-2015 Fixes #79. Windows installers default to non-privileged locations (%APPDATA%) for their installation paths.

26-Nov-2015 Fixes #38. VisualStudio and Xcode project files display module source files in a folder hierarchy that mirrors their location beneath their respective package directories.
