@@ -1,3 +1,5 @@
+06-Jan-2016 Fixes #96. The utility function Bam.Core.Module.MakePlaceholderPath could only be used once per module, due to the caching of similar TokenizedStrings. Undesired behaviour resulted if it was used multiple times, since as soon as any placeholder TokenizedString on that Module was aliased (the whole purpose behind a placeholder), all placeholder strings were aliased. Added a utility function Bam.Core.TokenizedString.CreateUncached, which will always return a unique TokenizedString. Bam.Core.Module.MakePlaceholderPath now uses TokenizedString.CreateUncached.
+
 06-Jan-2016 Added new test, PublishingTest1, which can be used to exercise the features of the Publishing package.
 
 04-Jan-2016 Fixes #95. All Publisher public methods (Include* and ChangeRPath) now return the modules they create, to allow such modules to be ordered through dependencies. Note that IncludeFramework returns an Array<CollatedObject> since it can copy directories, files and symbolic links.
